fix: preloader z-index, body padding-bottom to uncover swiper's content

--- a/movie-search/src/components/main-component/main-component.scss
+++ b/movie-search/src/components/main-component/main-component.scss
@@ -192,7 +192,7 @@
   &__preloader {
     position: absolute;
     top: 0;
-    z-index: 5;
+    z-index: 1;
 
     display: flex;
     justify-content: center;
@@ -327,6 +327,5 @@
   }
 
   &__movie-rating {
-    padding-bottom: 10px;
   }
 }
