--- a/movie-search/src/components/main.scss
+++ b/movie-search/src/components/main.scss
@@ -13,6 +13,7 @@ html {
 
 body {
   & {
+    padding-bottom: 74.5px;
     min-width: $small-phone-width;
 
     font: {
